Revert "fix album page content overflow after merging"
This reverts commit 7daab38feef6d271f8a58c8ed1445c30dbdc3122.

--- a/styles.css
+++ b/styles.css
@@ -186,12 +186,7 @@ aside {
   scrollbar-width: 5vw;
   scrollbar-color: #040404 #b3b3b3;
 }
-*,
-*::after,
-*::before {
-  box-sizing: content-box;
-  overflow-x: hidden;
-}
+
 /* Works on Chrome/Edge/Safari */
 *::-webkit-scrollbar {
   width: 0.75rem;
